--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,32 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header'
+    'map map location';
+  gap: 12px;
+  /*background-color: #2196F3;*/
+  padding: 12px;
+}
+
+.header-buttons {
+  grid-area: header;
+}
+
+.map {
+  grid-area: map;
+  min-width: 800px;
+  min-height: 400px;
+}
+
+.location {
+  grid-area: location;
 }
